syntax = "proto3";

package recruiterauth;

import "google/protobuf/timestamp.proto";

option go_package = "./pkg/pb/auth/recruiter";

service Recruiter {
    rpc RecruiterSignup(RecruiterSignupRequest) returns (RecruiterSignupResponse) {};
    rpc RecruiterLogin(RecruiterLoginInRequest) returns (RecruiterLoginResponse) {};
    rpc PostJobOpening(PostJobOpeningRequest) returns (PostJobOpeningResponse) {};
}

message RecruiterSignupRequest {
    string company_name = 1;
    string industry = 2;
    int32 company_size = 3;
    string website = 4;
    string headquarters_address = 5;
    string about_company = 6;
    string contact_email = 7;
    uint64 contact_phone_number = 8;
    string password = 9;
}

message RecruiterSignupResponse {
    int64 status = 1;
    RecruiterDetails Recruiter_details = 2;
    string token = 3;
    string error = 4;
}

message RecruiterDetails {
    uint64 id = 1;
    string company_name = 2;
    string industry = 3;
    int32 company_size = 4;
    string website = 5;
    string headquarters_address = 6;
    string about_company = 7;
    string contact_email = 8;
    uint64 contact_phone_number = 9;
}

message RecruiterLoginInRequest {
    string email = 1;
    string password = 2;
}

message RecruiterLoginResponse {
    int64 status = 1;
    RecruiterDetails Recruiter_details = 2;
    string token = 3;
    string error = 4;
}

message PostJobOpeningRequest {
    string title = 1;
    string description = 2;
    string requirements = 3;
    string company_name = 4;
    string location = 5;
    string employment_type = 6;
    string salary_range = 7;
    repeated string skills_required = 8;
    string experience_level = 9;
    string education_level = 10;
    google.protobuf.Timestamp application_deadline = 11;
}

message PostJobOpeningResponse {
    int64 status = 1;
    JobOpening job_opening = 2;
    string error = 3;
}

message JobOpening {
    uint64 id = 1;
    string title = 2;
    string description = 3;
    string requirements = 4;
    google.protobuf.Timestamp posted_on = 5;
    int32 total_applications = 6;
    string company_name = 7;
    string location = 8;
    string employment_type = 9;
    string salary_range = 10;
    repeated string skills_required = 11;
    string experience_level = 12;
    string education_level = 13;
    google.protobuf.Timestamp application_deadline = 14;
}
